--- a/index.html
+++ b/index.html
@@ -5,10 +5,40 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Rotating navigaton</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    
 </head>
 <body>
+    <div class="container">
+        <div class="circle-container">
+            <div class="circle">
+                <button id="close">
+                    <i class="fas fa-times"></i>
+                </button>
+                <button id="open">
+                    <i class="fas fa-bars"></i>
+                </button>
+            </div>
+        </div>
+        <div class="content">
+            <h1>Amazing Article</h1>
+            <small>Marina Nicolai</small>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima sequi dicta tempora officiis aspernatur cum dignissimos dolor omnis ipsam, blanditiis quis nostrum quasi rerum explicabo ea consectetur. Autem, repudiandae obcaecati?
+            </p>
+            <h3>My pet</h3>
+            <img src="./img/mikhail-vasilyev-NodtnCsLdTE-unsplash.jpg" alt="cat">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam et illum libero, quos inventore id ut ullam mollitia ipsa dignissimos sequi a quo beatae magni reprehenderit voluptatibus cumque quisquam, magnam architecto. Doloribus odio adipisci obcaecati aut ad assumenda aliquid, voluptatibus ab voluptatum laboriosam modi maiores ex accusamus molestias, provident deleniti placeat, excepturi dolorum impedit aspernatur quia alias. Voluptatem deleniti quia quis quae delectus necessitatibus, quisquam placeat nobis consequatur blanditiis rem architecto sequi, soluta dolores cupiditate!</p>
+        </div>
+    </div>
+    <nav>
+        <ul>
+            <li><i class="fas fa-home"></i>Home</li>
+            <li><i class="fas fa-home"></i>About</li>
+            <li><i class="fas fa-home"></i>Contact Us</li>
+        </ul>
+
+    </nav>
     
+    <script src='main.js'></script>
 </body>
 </html>
